; ModuleID = '/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-data.c_do_write.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-data.c_do_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.filesys_directory_node = type { i64 }

@lf_find = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_write(i32 %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.filesys_directory_node*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %11 = load i8*, i8** %9, align 8
  %12 = load i32, i32* @lf_find, align 4
  %13 = call %struct.filesys_directory_node* @filesys_lookup_file(i8* %11, i32 %12)
  store %struct.filesys_directory_node* %13, %struct.filesys_directory_node** %10, align 8
  %14 = load %struct.filesys_directory_node*, %struct.filesys_directory_node** %10, align 8
  %15 = icmp eq %struct.filesys_directory_node* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %31

17:                                               ; preds = %4
  %18 = load %struct.filesys_directory_node*, %struct.filesys_directory_node** %10, align 8
  %19 = getelementptr inbounds %struct.filesys_directory_node, %struct.filesys_directory_node* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp slt i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %17
  store i32 -2, i32* %5, align 4
  br label %31

23:                                               ; preds = %17
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* %7, align 4
  %26 = load %struct.filesys_directory_node*, %struct.filesys_directory_node** %10, align 8
  %27 = getelementptr inbounds %struct.filesys_directory_node, %struct.filesys_directory_node* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load i8*, i8** %8, align 8
  %30 = call i32 @do_inode_write(i32 %24, i32 %25, i64 %28, i8* %29)
  store i32 %30, i32* %5, align 4
  br label %31

31:                                               ; preds = %23, %22, %16
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local %struct.filesys_directory_node* @filesys_lookup_file(i8*, i32) #1

declare dso_local i32 @do_inode_write(i32, i32, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
